# redesigned-fiesta

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  README.md
backend/src/: main.rs  schema.rs
backend/src/api/: routes.rs
backend/src/app/: mod.rs  users.rs
backend/src/app/articles/: mod.rs
backend/src/app/posts/: mod.rs
backend/src/controllers/: changesettings.rs  mod.rs  search_algorithm.rs
backend/src/db/: articles.rs  users.rs
backend/src/models/: db.rs  init.rs  login.rs  mod.rs  posts.rs  user.rs
backend/src/utils/: ipfssync.rs  mod.rs
backend/src/utils/wallet_gen/: Cargo.toml
backend/src/utils/wallet_gen/src/: btc.rs  eth.rs  lib.rs  xmr.rs  zcash.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package.json  style.css
frontend/src/: app.rs  error.rs  lib.rs  main.rs  user_context.rs
frontend/src/components/: account_label.rs  article_preview.rs  connect_button.rs  footer.rs  header.rs  mod.rs  switch_network_button.rs  web3.rs  web3login.rs
frontend/src/components/large/: mod.rs  navbar.rs
frontend/src/components/medium/: accountform.rs  login.rs  mod.rs  web3.rs
frontend/src/components/small/: input.rs  mod.rs  psinput.rs  web3login.rs
frontend/src/hooks/: mod.rs  use_ethereum.rs
frontend/src/routes/: editor.rs  login.rs  mod.rs  register.rs  router.rs  search.rs  testing.rs
frontend/src/routes/article/: mod.rs
frontend/src/routes/home/: banner.rs  main_view.rs  mod.rs
frontend/src/services/: auth.rs  context.rs  header.rs  mod.rs  requests.rs  testpage.rs  web3.rs
frontend/src/services/ethereum_provider/: mod.rs
frontend/src/types/: articles.rs  auth.rs  mod.rs
frontend/src/views/: feeds.rs  mod.rs  searchbar.rs
frontend/src/views/pages/: choose_username.rs  coding.rs  createaccount.rs  home.rs  login.rs  mod.rs  profile.rs  settings.rs  wallets.rs
node_services/: index.mjs  package.json
node_services/api_gateway/: index.js
