[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix-web-httpauth = "0.8.0"
bson = "2.6.1"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
mongodb = "2.5.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.28.0", features = ["full"] }
uuid = "1.3.1"
wallet_gen = { path = "src/utils/wallet_gen" }
