[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib","rlib"]
[dependencies]
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["serde_derive", "derive"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-ethereum-provider = { git = "https://github.com/monomadic/yew-ethereum-provider" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
yew-hooks = "0.2.0"
gloo-utils = "0.1.6"
yew-utils = "0.3.0"
gloo = "0.8.0"
yew_form = "0.1.7"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.35"
web3 = { git = "https://github.com/monomadic/rust-web3", default-features = false, features = ["http-rustls-tls", "wasm", "eip-1193"] }

serde_json = "1.0.96"
log = "0.4.17"
wasm-logger = "0.2.0"
yew-oauth2 = "0.6.1"
gloo-net = "0.2.6"
js-sys = "0.3.61"
futures = "0.3.28"
yewdux = "0.9.2"
yewtil = "0.4.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "MouseEvent", 
    "KeyboardEvent",
    "Event", 
    "DragEvent",
    "InputEvent"
      ]
