[package]
name = "wallet_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
ethsign = "0.8.0"
monero = "0.18.2"
orchard = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
zcash_address = "0.2.1"
zcash_primitives = "0.11.0"
