[package]
name = "wallet_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitcoin = "0.30.0"
ethereum = "0.14.0"
ethereum-types = "0.14.1"
ethsign = "0.9.0"
hex = "0.4.3"
monero = "0.18.2"
orchard = "0.4.0"
rand = "0.8.5"
secp256k1 = { version = "0.27.0", features = ["rand"] }
serde = { version = "1.0.162", features = ["derive"] }
sha3 = "0.10.8"
zcash_address = "0.2.1"
zcash_primitives = "0.11.0"
# generate wallets.